Task_2 Fixed With SonarQube